Upgrading java to java 11 (java 13 in tests) Upgrading Storm to 2.3.0 Supporting downloading http enrichment tables Remove multiline string dependency